--- a/Android/app/src/main/res/layout/activity_hub_tutor.xml
+++ b/Android/app/src/main/res/layout/activity_hub_tutor.xml
@@ -32,6 +32,7 @@
         android:layout_height="62dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="104dp"
+        android:onClick="abrirAltas"
         android:text="Registrar Alumno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_intruccion_hub" />
@@ -73,7 +74,7 @@
         android:layout_marginTop="52dp"
         android:layout_marginEnd="96dp"
         android:text="Cancelar"
-        android:background="@color/black"
+        android:backgroundTint="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_consultas_hub" />
 </androidx.constraintlayout.widget.ConstraintLayout>
