--- a/Android/app/src/main/res/layout/activity_hub_tutor.xml
+++ b/Android/app/src/main/res/layout/activity_hub_tutor.xml
@@ -63,6 +63,7 @@
         android:layout_height="62dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="104dp"
+        android:onClick="abrirBajas"
         android:text="Eliminar Alumno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_alta_hub" />
