--- a/Android/app/src/main/res/layout/activity_hub_tutor.xml
+++ b/Android/app/src/main/res/layout/activity_hub_tutor.xml
@@ -53,6 +53,7 @@
         android:layout_height="62dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="104dp"
+        android:onClick="abrirCambios"
         android:text="Modificar Alumno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_bajas_hub" />
