--- a/Android/app/src/main/res/layout/activity_hub_tutor.xml
+++ b/Android/app/src/main/res/layout/activity_hub_tutor.xml
@@ -43,6 +43,7 @@
         android:layout_height="62dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="104dp"
+        android:onClick="abrirConsultas"
         android:text="Buscar Alumno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_cambios_hub" />
