--- a/Android/app/src/main/res/layout/activity_hub_tutor.xml
+++ b/Android/app/src/main/res/layout/activity_hub_tutor.xml
@@ -65,7 +65,7 @@
         android:layout_height="62dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="104dp"
-        android:onClick="abrirConsultas"
+        android:onClick="abrirCambiosReporte"
         android:text="Editar Reporte"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_altas_reporte" />
