--- a/Android/app/src/main/res/layout/activity_altas.xml
+++ b/Android/app/src/main/res/layout/activity_altas.xml
@@ -14,23 +14,24 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/btn_cancelar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="72dp"
-                android:layout_marginEnd="52dp"
-                android:text="Cancelar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spn_carrera" />
-
-            <Button
                 android:id="@+id/btn_registrar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="76dp"
+                android:onClick="altaAlumno"
                 android:text="Registrar"
                 app:layout_constraintEnd_toStartOf="@+id/btn_cancelar"
+                app:layout_constraintTop_toBottomOf="@+id/spn_carrera" />
+
+            <Button
+                android:id="@+id/btn_cancelar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="56dp"
+                android:text="Cancelar"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spn_carrera" />
 
             <TextView
@@ -57,18 +58,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/lbl_altas_alumno" />
 
             <EditText
-                android:id="@+id/txt_num_control"
-                android:layout_width="347dp"
-                android:layout_height="58dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="20dp"
-                android:ems="10"
-                android:hint="Numero de Control"
-                android:inputType="text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lbl_instrucciones_a" />
-
-            <EditText
                 android:id="@+id/txt_nombre"
                 android:layout_width="347dp"
                 android:layout_height="58dp"
@@ -84,8 +73,8 @@
                 android:id="@+id/txt_paterno"
                 android:layout_width="347dp"
                 android:layout_height="58dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="20dp"
                 android:ems="10"
                 android:hint="Apellido Paterno"
                 android:inputType="text"
@@ -104,35 +93,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_paterno" />
 
-            <EditText
-                android:id="@+id/txt_fecha_nac"
-                android:layout_width="341dp"
-                android:layout_height="54dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
-                android:ems="10"
-                android:hint="Fecha de nacimiento(aaaa-mm-dd) "
-                android:inputType="date"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_materno" />
-
-            <EditText
-                android:id="@+id/txt_num_telefono"
-                android:layout_width="343dp"
-                android:layout_height="61dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginEnd="24dp"
-                android:ems="10"
-                android:hint="Numero de telefono"
-                android:inputType="number"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_fecha_nac" />
-
             <Spinner
                 android:id="@+id/spn_semestre"
                 android:layout_width="343dp"
                 android:layout_height="46dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_num_telefono" />
@@ -145,6 +110,51 @@
                 android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spn_semestre" />
+
+            <EditText
+                android:id="@+id/txt_num_control"
+                android:layout_width="344dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="33dp"
+                android:layout_marginTop="53dp"
+                android:ems="10"
+                android:hint="Numero de Control"
+                android:inputType="number"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lbl_instrucciones_a" />
+
+            <EditText
+                android:id="@+id/txt_fecha_nac"
+                android:layout_width="346dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Fecha de Nacimiento (aaaa-mm-aa)"
+                android:inputType="date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_materno" />
+
+            <EditText
+                android:id="@+id/txt_num_telefono"
+                android:layout_width="337dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="37dp"
+                android:layout_marginTop="25dp"
+                android:ems="10"
+                android:hint="Numer de Telefono"
+                android:inputType="number"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_fecha_nac" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/lista_alumnos"
+                android:layout_width="397dp"
+                android:layout_height="317dp"
+                android:layout_marginTop="36dp"
+                android:layout_marginEnd="1dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_cancelar" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
