--- a/Android/app/src/main/res/layout/activity_bajas.xml
+++ b/Android/app/src/main/res/layout/activity_bajas.xml
@@ -66,6 +66,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="58dp"
+        android:onClick="bajaAlumno"
         android:text="Eliminar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_limpiar_b" />
